Complete remaining style formatting, edit content
Revised content while styling all content for a close-enough fit with
the image provided by Odin Project (see repo README.md). There's likely
more tweaks to be made, given behavior of some elements for extremely
thin windows or extremely-close zooms, but the project page advised
against worrying over that kind of thing, for now.

--- a/index.html
+++ b/index.html
@@ -10,54 +10,55 @@
 <body>
   <div class="header">
     <p class="headerlogo">This Could Be Your Logo</p>
-    <div class="headerlinks">
+    <div>
       <a href="index.html">link one</a>
       <a href="index.html">link two</a>
       <a href="index.html">link three</a>
     </div>
   </div>
-  <div class="section A">
+  <div class="A">
     <div class="Aleft">
       <p class="AleftTopText">This website is a mimic</p>
-      <p class="AleftBottomText">It's intended to mimic and expand upon a mock-up provided by the Odin Project.<br><br>Would you like a website like this?</p>
-      <button>Sign up</button>
+      <p class="AleftBottomText">It's intended to mimic and expand upon a mock-up provided by the Odin Project.
+        <br><br>Would you like a website like this?</p>
+      <button>Non-operational button</button>
     </div>
     <div class="Aright">
       <img src="/img/00-PHWBBP.jpeg" alt="It's business.">
     </div>
   </div>
-  <div class="section B">
+  <div class="B">
     <p class="BtopText">Please accept this small collection of images.</p>
     <div class="Bimages">
       <div>
-        <img src="/img/01-OCaD.jpeg" alt="Yes, people work like this.">
+        <a href="index.html"><img src="/img/01-OCaD.jpeg" alt="Yes, people work like this."></a>
         <p class="BimgText">Your business or organization could display whatever they'd like, here.</p>
       </div>
-      <div class="Bdiv">
-        <img src="/img/02-RoFac.jpeg" alt="A factory? A warehouse? Your call!">
-        <p class="BimgText">No matter the content, it's easy to organize and display links to other sections of the site.</p>
-      </div>
       <div>
-        <img src="/img/03-ABBC.jpeg" alt="An airport, right? Maybe it's *your* facilities.">
-        <p class="BimgText">Simple organization and labels can make a site easy to use.</p>
-      </div>
-      <div>
-        <img src="/img/04-FEVB.jpeg" alt="It could be any building, but it could be *your* building, too.">
+        <a href="index.html"><img src="/img/02-RoFac.jpeg" alt="A factory? A warehouse? Your call!"></a>
         <p class="BimgText">Free-to-use images can be flexibly modified to fit your needs.</p>
+      </div>
+      <div>
+        <a href="index.html"><img src="/img/03-ABBC.jpeg" alt="An airport, right? Maybe it's *your* facilities."></a>
+        <p class="BimgText">Simple presentation and labels can make a site easy to use.</p>
+      </div>
+      <div>
+        <a href="index.html"><img src="/img/04-FEVB.jpeg" alt="It could be any building, but it could be *your* building, too."></a>
+        <p class="BimgText">No matter the content, it's easy to organize and display links to other parts of the site.</p>
       </div>
     </div>
   </div>
-  <div class="section C">
-    <p class="Cquote">"I went to the zoo once and saw this thing they call an anteater. That was quite enough for me."</p>
-    <p class="Cattrib">-Thomas Pynchon</p>
+  <div class="C">
+    <p class="quote">"I went to the zoo once and saw this thing they call an anteater. That was quite enough for me."</p>
+    <p class="attrib">-Thomas Pynchon</p>
   </div>
-  <div class="section D">
+  <div class="D">
     <div class="Dbox">
-      <div class="DboxLeft">
-        <p class="DboxLeftTop">What do you think?</p>
-        <p class="DboxLeftBottom">This type of section is typically used as a 'call-to-action', inviting a site visitor to continue browsing.</p>
+      <div class="DLeft">
+        <p class="DLeftTopText">What do you think?</p>
+        <p class="DLeftBottomText">This is an example of a 'call-to-action', inviting the site's visitor to interact for more content.</p>
       </div>
-      <button>Sign up</button>
+      <button>Non-operational button</button>
     </div>
   </div>
   <div class="footer">
