--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
   <div class="header">
-    <p class="headerlogo">This Could Be Your Logo</p>
+    <p class="headerlogo">This Could Be Your Organization's Name, Here</p>
     <div>
       <a href="index.html">link one</a>
       <a href="index.html">link two</a>
@@ -20,30 +20,30 @@
     <div class="Aleft">
       <p class="AleftTopText">This website is a mimic</p>
       <p class="AleftBottomText">It's intended to mimic and expand upon a mock-up provided by the Odin Project.
-        <br><br>Would you like a website like this?</p>
-      <button>Non-operational button</button>
+        <br>Would you like a website like this? You could have one. Pretty quick, too.</p>
+      <button>Find out More</button>
     </div>
     <div class="Aright">
-      <img src="/img/00-PHWBBP.jpeg" alt="It's business.">
+      <img src="./img/00-PHWBBP.jpeg" alt="It's business.">
     </div>
   </div>
   <div class="B">
     <p class="BtopText">Please accept this small collection of images.</p>
     <div class="Bimages">
       <div>
-        <a href="index.html"><img src="/img/01-OCaD.jpeg" alt="Yes, people work like this."></a>
+        <a href="index.html"><img src="./img/01-OCaD.jpeg" alt="Yes, people work like this."></a>
         <p class="BimgText">Your business or organization could display whatever they'd like, here.</p>
       </div>
       <div>
-        <a href="index.html"><img src="/img/02-RoFac.jpeg" alt="A factory? A warehouse? Your call!"></a>
+        <a href="index.html"><img src="./img/02-RoFac.jpeg" alt="A factory? A warehouse? Your call!"></a>
         <p class="BimgText">Free-to-use images can be flexibly modified to fit your needs.</p>
       </div>
       <div>
-        <a href="index.html"><img src="/img/03-ABBC.jpeg" alt="An airport, right? Maybe it's *your* facilities."></a>
+        <a href="index.html"><img src="./img/03-ABBC.jpeg" alt="An airport, right? Maybe it's *your* facilities."></a>
         <p class="BimgText">Simple presentation and labels can make a site easy to use.</p>
       </div>
       <div>
-        <a href="index.html"><img src="/img/04-FEVB.jpeg" alt="It could be any building, but it could be *your* building, too."></a>
+        <a href="index.html"><img src="./img/04-FEVB.jpeg" alt="It could be any building, but it could be *your* building, too."></a>
         <p class="BimgText">No matter the content, it's easy to organize and display links to other parts of the site.</p>
       </div>
     </div>
