--- a/index.html
+++ b/index.html
@@ -24,26 +24,26 @@
       <button>Find out More</button>
     </div>
     <div class="Aright">
-      <img src="./img/00-PHWBBP.jpeg" alt="It's business.">
+      <img src="./img/00-PHWBBP.jpeg" alt="Image placeholder">
     </div>
   </div>
   <div class="B">
     <p class="BtopText">Please accept this small collection of images.</p>
     <div class="Bimages">
       <div>
-        <a href="index.html"><img src="./img/01-OCaD.jpeg" alt="Yes, people work like this."></a>
+        <a href="index.html"><img src="./img/01-OCaD.jpeg" alt="image placeholder"></a>
         <p class="BimgText">Your business or organization could display whatever they'd like, here.</p>
       </div>
       <div>
-        <a href="index.html"><img src="./img/02-RoFac.jpeg" alt="A factory? A warehouse? Your call!"></a>
+        <a href="index.html"><img src="./img/02-RoFac.jpeg" alt="image placeholder"></a>
         <p class="BimgText">Free-to-use images can be flexibly modified to fit your needs.</p>
       </div>
       <div>
-        <a href="index.html"><img src="./img/03-ABBC.jpeg" alt="An airport, right? Maybe it's *your* facilities."></a>
+        <a href="index.html"><img src="./img/03-ABBC.jpeg" alt="image placeholder"></a>
         <p class="BimgText">Simple presentation and labels can make a site easy to use.</p>
       </div>
       <div>
-        <a href="index.html"><img src="./img/04-FEVB.jpeg" alt="It could be any building, but it could be *your* building, too."></a>
+        <a href="index.html"><img src="./img/04-FEVB.jpeg" alt="image placeholder"></a>
         <p class="BimgText">No matter the content, it's easy to organize and display links to other parts of the site.</p>
       </div>
     </div>
