Set minimum width to prevent overflow deform

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       <p class="AleftTopText">This website is a mimic</p>
       <p class="AleftBottomText">It's intended to mimic and expand upon a mock-up provided by the Odin Project.
         <br>Would you like a website like this? You could have one. Pretty quick, too.</p>
-      <button>Find out More</button>
+      <button href="index.html">Find out More</button>
     </div>
     <div class="Aright">
       <img src="./img/00-PHWBBP.jpeg" alt="Image placeholder">
@@ -58,7 +58,8 @@
         <p class="DLeftTopText">What do you think?</p>
         <p class="DLeftBottomText">This is an example of a 'call-to-action', inviting the site's visitor to interact for more content.</p>
       </div>
-      <button>Non-operational button</button>
+      <button>Seems fine</button>
+      <button>Could be better?</button>
     </div>
   </div>
   <div class="footer">
